Refactor and integrate with DynamoDB
