# controllers/default_controller.py
@@ -1,12 +1,0 @@
-
-def create_user(body) -> str:
-    return 'do some magic!'
-
-def get_user_by_name(username) -> str:
-    return 'do some magic!'
-
-def update_user(username, body) -> str:
-    return 'do some magic!'
-
-def delete_user(username) -> str:
-    return 'do some magic!'
