# swagger.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "users.ps.ngra.nginxlab.com"
+host: "localhost:8080"
 basePath: "/v1"
 schemes:
 - "http"
@@ -21,7 +21,7 @@ paths:
       - "user"
       summary: "Create user"
       description: "This can only be done by the logged in user."
-      operationId: "controllers.default_controller.create_user"
+      operationId: "app.create_user"
       produces:
       - "application/json"
       parameters:
@@ -37,19 +37,19 @@ paths:
       x-tags:
       - tag: "user"
       x-operationId: "create_user"
-  /users/{username}:
+  /users/{id}:
     get:
       tags:
       - "user"
-      summary: "Get user by user name"
+      summary: "Get user by user id"
       description: ""
-      operationId: "controllers.default_controller.get_user_by_name"
+      operationId: "app.get_user_by_id"
       produces:
       - "application/json"
       parameters:
-      - name: "username"
+      - name: "id"
         in: "path"
-        description: "The name that needs to be fetched. Use user1 for testing."
+        description: "The id that needs to be fetched. Use user1 for testing."
         required: true
         type: "string"
       responses:
@@ -58,24 +58,24 @@ paths:
           schema:
             $ref: "#/definitions/User"
         400:
-          description: "Invalid username supplied"
+          description: "Invalid id supplied"
         404:
           description: "User not found"
       x-tags:
       - tag: "user"
-      x-operationId: "get_user_by_name"
+      x-operationId: "get_user_by_id"
     put:
       tags:
       - "user"
       summary: "Updated user"
       description: "This can only be done by the logged in user."
-      operationId: "controllers.default_controller.update_user"
+      operationId: "app.update_user"
       produces:
       - "application/json"
       parameters:
-      - name: "username"
+      - name: "id"
         in: "path"
-        description: "name that need to be deleted"
+        description: "The id that need to be updated"
         required: true
         type: "string"
       - in: "body"
@@ -97,18 +97,18 @@ paths:
       - "user"
       summary: "Delete user"
       description: "This can only be done by the logged in user."
-      operationId: "controllers.default_controller.delete_user"
+      operationId: "app.delete_user"
       produces:
       - "application/json"
       parameters:
-      - name: "username"
+      - name: "id"
         in: "path"
-        description: "The name that needs to be deleted"
+        description: "The user that needs to be deleted"
         required: true
         type: "string"
       responses:
         400:
-          description: "Invalid username supplied"
+          description: "Invalid id supplied"
         404:
           description: "User not found"
       x-tags:
@@ -119,8 +119,7 @@ definitions:
     type: "object"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
       username:
         type: "string"
       firstName:
@@ -134,6 +133,4 @@ definitions:
       phone:
         type: "string"
       userStatus:
-        type: "integer"
-        format: "int32"
-        description: "User Status"
+        type: "string"
